# MultiProcessCTP

./: CMakeLists.txt  README.md  readme.txt
common/: ClearFile.cpp  ClearFile.h  DataStruct.cpp  DataStruct.h  Log.h  README.md  SystemDir.cpp  SystemDir.h  Timer.cpp  Timer.h  constant.h  event_loop.cpp  event_loop.h  md_struct.h  msg.h  oms_struct.h  stream_handler.h  task_scheduler.cpp  task_scheduler.h
ctp.api/: CMakeLists.txt  CtpMD.cpp  CtpMD.h  CtpTD.cpp  CtpTD.h  README.md  Run.cpp  TDEvent.cpp  TDEvent.h  stdafx.h
lib/: readme.txt
mmap/: CMakeLists.txt  Journal.cpp  JournalHandler.cpp  JournalReader.cpp  JournalWriter.cpp  Page.cpp  PageProvider.cpp  PageUtil.cpp  README.md
mmap/include/: Frame.hpp  FrameHeader.h  Hash.hpp  IJournalVisitor.h  IPageProvider.h  Journal.h  JournalHandler.h  JournalReader.h  JournalWriter.h  Page.h  PageHeader.h  PageProvider.h  PageUtil.h  YJJ_DECLARE.h  constants.h
strategy/: CMakeLists.txt  Strategy_test.cpp
strategy/template/: Indicators.cpp  Indicators.h  StrategyEvent.cpp  StrategyEvent.h  StrategyTemplate.cpp  StrategyTemplate.h  stdafx.h
